UPDATE: Varios archivos

--- a/HolaMundo.html
+++ b/HolaMundo.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title> Everis BootCamp </title>
-		<link rel="slylesheet" type="txt/css" href="style.css">
+		<link rel="stylesheet" type="txt/css" href="style.css">
 	</head>
 	<body>
-		<h1>Hola mundo</h1>
+		<h1>Hola Mundo</h1>
 	</body>
 </html>
