--- a/HolaMundo.html
+++ b/HolaMundo.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title> Everis BootCamp </title>
-		<link rel="stylesheet" type="txt/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<h1>Hola Mundo</h1>
